--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,6 @@
     <a class="btn btn-default">Traders</a>
   </nav>
   <br><br>
-  <app-market></app-market>
+  <app-traders></app-traders>
 </div>
 
