--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,10 +17,10 @@
   <h1>LIVE TRADING</h1>
   <br><br>
   <nav>
-    <a class="btn btn-default">Market</a>
-    <a class="btn btn-default">Traders</a>
+    <a class="btn btn-default" routerLink="/market" routerLinkActive="active">Market</a>
+    <a class="btn btn-default" routerLink="/traders" routerLinkActive="active">Traders</a>
   </nav>
   <br><br>
-  <app-traders></app-traders>
+  <router-outlet></router-outlet>
 </div>
 
