--- a/src/app/trader-details/trader-details.component.html
+++ b/src/app/trader-details/trader-details.component.html
@@ -5,20 +5,22 @@
     <h2>Released PnL:   {{trader.getReleasedPnL()}}</h2>
     <h2>Total PnL:      {{trader.getTotalPnL()}}</h2>
   </div>
-  <!--<div class="col-md-4">-->
-    <!--<div class="form-group">-->
-      <!--<label>Symbol</label>-->
+  <div class="col-md-4">
+    <div class="form-group">
+      <label>Symbol</label>
       <!--<app-stocks (onStockSelect)="onStockSelect($event)" ></app-stocks>-->
-      <!--<input type="number" class="form-control" id="count" [formControl]="countInput"  >-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="count">Count</label>-->
-      <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label *ngIf="selectedStock != null">Current price: {{selectedStock.getPrice()}}</label>-->
-    <!--</div>-->
-    <!--<button class="btn btn-success" (click)="buyStock()" id="buyStockBtn" >Buy Stock</button>-->
-  <!--</div>-->
+      <input type="number" class="form-control" id="sym" [formControl]="symbolInput"  >
+
+    </div>
+    <div class="form-group">
+      <label for="count">Count</label>
+      <input type="number" class="form-control" id="count" [formControl]="countInput"  >
+      </div>
+    <div class="form-group">
+      <label *ngIf="selectedStock != null">Current price: {{selectedStock.getPrice()}}</label>
+    </div>
+    <button class="btn btn-success" (click)="buyStock()" id="buyStockBtn" >Buy Stock</button>
+  </div>
   <div class="col-md-4">
 
   </div>
